Tradition changes (mostly) - pending invtn + ascns

--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -1,5 +1,85 @@
 ﻿l_english:
 
+# ------------------------------------------------- Adaptability
+ tr_adaptability_finish_desc:0 "Unlocks the §Y$decision_prospect$§! decision, which allows us to prospect for an additional resource deposit once on our planets.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YStatecraft§! will be available.§!\n"
+ tr_adaptability_void_finish_desc:0 "Unlocks the §Y$decision_prospect_void$§! decision, which allows us to prospect for additional resources in orbit of our habitats.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YStatecraft§! will be available.§!\n"
+
+# ------------------------------------------------- Diplomacy
+ tr_diplomacy_diplomatic_networking_desc:0 "Embassies produce §G+3§! £unity£ §YUnity§!, scaling up to §G+10§! based on the empire £diplo_weight£ §Y$diplomatic_weight$§!."
+
+ tr_diplomacy_finish_tooltip:4 "Diplomatic Weight: §G+10%§!\nAvailable Envoys: §G+1§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YStatecraft§! will be available.§!\n"
+
+# ------------------------------------------------- Discovery
+ tr_discovery_finish_tooltip:0 "Each time §Y3§! £trigger_tec_research£ Technologies have been researched, the empire has a §Y33%§! chance of gaining a random §GGuaranteed Research§! with §Y33%§! of progress. This effect stacks.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YInvention§! will be available.§!\n"
+ tr_discovery_federations_finish_tooltip:0 "Each time §Y3§! £trigger_tec_research£ Technologies have been researched, the empire has a §Y33%§! chance of gaining a random §GGuaranteed Research§! with §Y33%§! of progress. This effect stacks.\nGrants access to the §Y$research_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YInvention§! will be available.§!\n"
+
+ tr_discovery_databank_uplinks:0 "$tech_databank_uplinks$"
+ tr_discovery_databank_uplinks_desc:3 "§HUnlocks Edict:§! $edict_research_subsidies$\n§Y$mod_station_researchers_produces_mult$§! increased by §G50%§!.\n§Y$starbase_constructions_research_produces$§! increased by §G20%§!."
+ tr_discovery_databank_uplinks_delayed:0 "$tech_databank_uplinks_desc$"
+
+# ------------------------------------------------- Domination
+ tr_domination_finish_desc:4 "$MOD_EMPIRE_SIZE_POPS_MULT$ §G-10%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YControl§! will be available.§!\n"
+ tr_domination_federations_finish_desc:4 "$MOD_EMPIRE_SIZE_POPS_MULT$ §G-10%§!\nGrants access to the §Y$hegemony_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YControl§! will be available.§!\n"
+
+# ------------------------------------------------- Expansion
+ tr_expansion_galactic_ambition:0 "Undiscovered Wonders"
+ tr_expansion_galactic_ambition_tooltip:0 "Our planets will gain a positive valuable £blocker£ §YResource deposit§! on colonization, or via £unity£ Planetary Decision."
+ tr_expansion_galactic_ambition_delayed:0 "We must be ready for anything that awaits in the new frontiers we discover and trespass, and the riches and natural wonders we find are the key to our path to a better future."
+
+ tr_expansion_galactic_ambition_vd:0 "Astral Design"
+ tr_expansion_galactic_ambition_vd_tooltip:0 "Our Habitats will gain a positive valuable £blocker£ §YDeposit§! based on the habitat features on creation, or via £unity£ Planetary Decision."
+ tr_expansion_galactic_ambition_vd_delayed:0 "New habitats must be well designed and suited with adequate installations in order to ensure our species a better future."
+
+ tr_expansion_finish_vd:0 "$tr_expansion_finish$"
+ tr_expansion_finish_desc:4 "Max Districts (Non-artificial planets only): §G+1§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YOutreach§! will be available.§!\n"
+ tr_expansion_finish_vd_desc:4 "Habitat cost: §G-20%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YOutreach§! will be available.§!\n"
+
+ tr_tec_expansion_a_new_life_cloning:1 "Embryonic Cryobanks"
+ tr_tec_expansion_a_new_life_cloning_desc:0 "£pops£ §YOrganic Pop Assembly Speed§! increased by §G+10%§!."
+ tr_tec_expansion_a_new_life_cloning_delayed:2 "By preserving the fundamental basis of our species and transferring entire batches of nearly developed embryos to new colonies, we will greatly improve our colonization, adaptation and development process."
+
+# ------------------------------------------------- Harmony
+ tr_harmony_finish_desc:4 "$MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+25%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YBalance§! will be available.§!\n"
+ tr_harmony_federations_finish_desc:0 "$MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+25%§!.\nGrants access to the §Y$spiritualist_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!"
+
+# ------------------------------------------------- Mercantile
+ tr_mercantile_trickle_up_economics_gestalt:0 "Within Cells Interlinked"
+ tr_mercantile_trickle_up_economics_gestalt_desc:0 "£job_maintenance_drone£ §YMaintenance Drones§! produce §Y2§! §YTrade Value§!."
+ tr_mercantile_trickle_up_economics_gestalt_delayed:0 "Chains of interlinked semi-emotional emulator modules on our menial drones will surely increase our margin of benefit."
+
+ tr_mercantile_commercial_enterprise_gestalt:0 "Supplementary Trading Processing"
+ tr_mercantile_commercial_enterprise_gestalt_tooltip:0 "£building£ §YCommercial Zones§! buildings provide §Y1§! £job_tec_trade_drone£ §Y$job_tec_trade_Drone$ Job§!.\nRing World §YCommercial Segments§! and Habitat §YTrade Districts§! do likewise."
+ tr_mercantile_commercial_enterprise_gestalt_delayed:0 "Higher initial investments will convey into higher gains for our collective."
+
+ tr_mercantile_finish_desc:4 "Trade Value: §G+10%§!.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
+ tr_mercantile_federations_finish_desc:0 "$MOD_TRADE_VALUE_MULT$: §G+10%§!\nGrants access to the §Y$trade_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
+
+# ------------------------------------------------- Prosperity
+ tr_prosperity_finish_desc:4 "Resources from £job£ jobs: §G+5%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
+
+# ------------------------------------------------- Subterfuge
+ tr_subterfuge_finish_desc:0 "Successful §YOperations§! refund §G50%§! of their Infiltration Level Cost.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YControl§! will be available.§!\n"
+
+# ------------------------------------------------- Supremacy
+ tr_supremacy_finish_desc:4 "Unlocks the §YWar Doctrines§! Policies.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YMight§! will be available.§!\n"
+
+# ------------------------------------------------- Synchronicity
+ tr_synchronicity_finish_desc:2 "$MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+25%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YBalance§! will be available.§!\n"
+ tr_synchronicity_machine_finish_desc:2 "$MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+25%§!\n§HUnlocks Edict:§! $edict_industrial_maintenance$.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YBalance§! will be available.§!\n"
+
+# ------------------------------------------------- Unyielding
+ tr_unyielding_fortress_doctrine_nemesis:4 "$tr_unyielding_fortress_doctrine$"
+ tr_unyielding_finish_tooltip:4 "Defense Platforms Cap: §G+50%§!.\nStarbase Upkeep: §G-20%§!.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YMight§! will be available.§!\n"
+
+# ------------------------------------------------- Versatility
+ tr_versatility_adopt_tooltip:0 "Machine Species Modification Points: §G+2§!."
+ tr_versatility_adopt_synths:0 "$tr_versatility_adopt$"
+ tr_versatility_adopt_synths_tooltip:0 "Robotic Species Modification Points: §G+2§!."
+
+ tr_versatility_finish_tooltip:0 "Pop Assembly speed: §G+15%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YStatecraft§! will be available.§!\n"
+
+ tr_versatility_spatial_optimization_tooltip:0 "£building£ §YCapital Buildings§! provide the planet with §G+5%§! £housing£ Housing, up to §G+20%§!."
+
 # Psionic
 # ------------------------------------------------------------
  tradition_tec_vanilla_psionics:0 "Psionic"
@@ -45,12 +125,14 @@
  tradition_tec_vanilla_genetics_desc:0 "Natural evolution was always shaped by a single, crude tool: failure. Only now may we define success."
 
  tr_genetics_adopt:0 "Genetic Traditions"
- tr_genetics_adopt_desc:0 "$tr_genetics_adopt_effect$"
- tr_genetics_adopt_effect:7 "Organic Species Modification Points: §G+3§!."
+ tr_genetics_adopt_tooltip:7 "Organic Species Modification Points: §G+3§!."
 	# "to do - +1 trait points for organic species / unlock clone vats" - +3 points in pick and finisher in vanilla
 
  tr_genetics_finish:0 "Genetic Traditions Finished"
- tr_genetics_finish_desc:4 "Organic Species Modification Points: §G+3§!\nAllows research of rare §YTransgenesis§! technologies.\n\n$TRADITIONS_FINISH_AP$"
+ tr_genetics_finish_tooltip:4 "Organic Species Modification Points: §G+3§!\n\n$TRADITIONS_FINISH_AP$"
+ tr_genetics_finish_extra_traits:0 "$tr_genetics_finish$"
+ tr_genetics_finish_extra_traits_tooltip:0 "Organic Species Modification Points: §G+3§!\nAllows research of rare §YTransgenesis§! technologies.\n$TRADITIONS_FINISH_AP$"
+
 
 
  tr_genetics_resequencing:0 "Genetic Resequencing"
