--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1886,6 +1886,24 @@ tec_jump_empty:0 "\n\n"
 # ---------------------------------------------------------------
 
 # ------------------------------------------------- Outreach
+ building_tec_outreach_platform:0 "Global Assist Platform"
+ building_tec_outreach_platform_plural:0 "Global Assist Platforms"
+ building_tec_outreach_platform_desc:0 "Modular and efficient structures with a highly rich database developed to suit a colony with all possible standard construction templates necessary, regardless of distance or technological enlightment."
+ building_tec_outreach_platform_effect:0 "This £building£ Building provide different bonuses based on the §YPlanet Designation§!.\n\nThis £building£ Building increases £mod_planet_building_build_speed_mult£ §Y$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$§! and £unity£ §Y$MOD_PLANET_DECISION_ENACT_SPEED_MULT$§! based on the number of Construction Ships docked at the planet.\n§HThe maximum effect is reached with 3 ships docked§!\n\n"
+
+ job_tec_planner:0 "Planner"
+ job_tec_planner_plural:0 "Planners"
+ job_tec_planner_desc:0 "Meticulous experts and engineers designated to fabricate specific construction templates to improve and facilitate the development of colonies and planets as a whole."
+ job_tec_planner_effect_desc:0 "£job_tec_planner£ $job_tec_planner_plural$ convert £consumer_goods£ §YConsumer Goods§! into £unity£ §YUnity§!, £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§! and £trigger_tec_basic_resources£ §YBasic Resources§! based on the planet type."
+
+ job_tec_planner_drone:0 "Planner Drone"
+ job_tec_planner_drone_plural:0 "Planner Drones"
+ job_tec_planner_drone_desc:0 "Meticulous drones assigned to fabricate specific construction templates to improve and facilitate the development of colonies and planets as a whole."
+ job_tec_planner_drone_effect_desc:0 "£job_tec_planner_drone£ $job_tec_planner_drone_plural$ convert £trigger_tec_basic_resources£ §YBasic Resources§! into £unity£ §YUnity§!, £mod_planet_amenities_no_happiness_add£ §YAmenities§! and £trigger_tec_basic_resources£ §YBasic Resources§! based on the planet type."
+
+ building_tec_outreach_autofabricator:0 "Autofabricators"
+ building_tec_outreach_autofabricator_desc:0 "Modular and efficient structures with a highly rich database developed to suit a colony with all possible standard construction templates necessary, regardless of distance or technological enlightment."
+ building_tec_outreach_autofabricator_effect:0 "This £building£ automatically assembles both £job_roboticist£ Robotic and £tec_genepoints£ Organic pops"
 
 # ------------------------------------------------- Invention Breakthroughs
  building_tec_geomorpher_1:0 "Geomorpher"
@@ -1952,8 +1970,6 @@ tec_jump_empty:0 "\n\n"
  mod_job_tec_machine_admin_drone_add:0 "$job_tec_machine_admin_drone$ Jobs"
  mod_job_tec_machine_admin_drone_per_pop:0 "§G+1§! $job_tec_machine_admin_drone$ Job Per $VALUE$ Pops"
  mod_job_tec_machine_admin_drone_per_pop_short:0 "\n§G+1§! £job_tec_machine_admin_drone_add£ per $VALUE$ £pop£"
-
-
 
 
 # ---------------------------------------------------------------
