--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -50,12 +50,14 @@
  tec_loc_research_jobs:0 "$mod_base_planet_researchers$"
  tec_loc_unity_jobs:0 "$mod_base_planet_administrators$"
 
- tec_loc_job_output: "$planet_jobs_produces_mult$"
+ tec_loc_job_output:0 "$mod_planet_jobs_produces_mult$"
 
- tec_loc_habitability: "£mod_habitability_floor_add£ Habitability"
- tec_loc_capital_tier: "£building£ Capital Tier"
+ tec_loc_habitability:0 "£mod_habitability_floor_add£ Habitability"
+ tec_loc_terraform_speed:0 "£mod_country_terraform_speed_mult£ $MOD_COUNTRY_TERRAFORM_SPEED_MULT$"
 
- tec_loc_cannot reproduce: "§RCannot Reproduce Naturally§!"
+ tec_loc_capital_tier:0 "£building£ Capital Tier"
+
+ tec_loc_cannot reproduce:0 "§RCannot Reproduce Naturally§!"
 
  tec_blank:0 ""
 
