Rewrote districts with inline scripts

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -263,7 +263,8 @@
  tec_cw_pac_bonus_desc:0 ", §Y£mod_edict_cap_add£ Edict Funds§!"
  tec_cw_lib_bonus_desc:0 ", §Y£pop_cat_worker£ $mod_pop_cat_worker_political_power$§!"
  tec_cw_auth_bonus_desc:0 ", §Y£pop_cat_ruler£ $mod_pop_cat_ruler_political_power$§!" 
- tec_cw_phobe_bonus_desc:0 "" # Deliberately left empty
+# Deliberately left empty
+ tec_cw_phobe_bonus_desc:0 "" 
  tec_cw_phile_bonus_desc:0 ", §Y$MOD_POP_HOUSING_USAGE_MULT$§!"
  tec_cw_green_bonus_desc:0 ", §Y$mod_planet_structures_upkeep_mult$ Reduction§!"
  tec_cw_ind_bonus_desc:0 ", §Y$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$§!"
