--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3527,3 +3527,6 @@ planet_maintenancedrones:0 "Maintenance Drones"
  district_tec_elysium_commercial:0 "Elysian Commercial Arcology"
  district_tec_elysium_commercial_plural:0 "Elysian Commercial Arcologies"
  district_tec_elysium_commercial_desc:0 "Specialized arcologies where you can buy nearly all possible things fabricated in the ring, or enjoy a good meal from products directly harvested on it."
+
+
+job_angler_effect_desc: "$job_aqu_angler_effect_desc$"
