--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -540,8 +540,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 
  trait_tec_hyperthermophilic:0 "Hyperthermophile"
  trait_tec_hyperthermophilic_desc:0 "§LWith the ability to lose heat and cool down quickly, retain high amounts of necessary hydratation and protection against solar rays, this species is able to survive in the harsher warm climates.§!"
- TRAIT_TEC_HYPERTHERMOPHILIC_EFFECT:0 "$MOD_POP_ENVIRONMENT_TOLERANCE$ on §HWarm§! Worlds: §G+20%§!\n
-$mod_planet_pops_upkeep_mult$ on §HWarm§! Worlds: §G-20%§!.\n\nEffects inverted on §HCold§! planets, and increased for §EReptilian§! species by §Y50%§!."
+ TRAIT_TEC_HYPERTHERMOPHILIC_EFFECT:0 "$MOD_POP_ENVIRONMENT_TOLERANCE$ on §HWarm§! Worlds: §G+20%§!\n$mod_planet_pops_upkeep_mult$ on §HWarm§! Worlds: §G-20%§!.\n\nEffects inverted on §HCold§! planets, and increased for §EReptilian§! species by §Y50%§!."
 
 
 
@@ -550,8 +549,7 @@ $mod_planet_pops_upkeep_mult$ on §HWarm§! Worlds: §G-20%§!.\n\nEffects inver
  #trait_mam_fur_desc:0 "§LThis species has developed a thick fur and fat layer over its skin, being extremely protective for extreme temperatures.§!"
  trait_tec_cryophilic:0 "Cryophilic Hibernation"
  trait_tec_cryophilic_desc:0 "§LThanks to diverse evolutionary advantages, this species is able to thrive in extreme low-temperature environments, forcing a semi-stasis on colder seasons.§!"
- TRAIT_TEC_CRYOPHILIC_EFFECT:0 "$MOD_POP_ENVIRONMENT_TOLERANCE$ on §BCold§! Worlds: §G+20%§!\n
-$mod_planet_jobs_produces_mult$ on §BCold§! Worlds: §G+5%§!\nDuring the last 3 month of each year, this species will produce §Y-10%§! less.\n\nEffects increased for §EMammalian§! species by §Y50%§!."
+ TRAIT_TEC_CRYOPHILIC_EFFECT:0 "$MOD_POP_ENVIRONMENT_TOLERANCE$ on §BCold§! Worlds: §G+20%§!\n$mod_planet_jobs_produces_mult$ on §BCold§! Worlds: §G+5%§!\nDuring the last 3 month of each year, this species will produce §Y-10%§! less.\n\nEffects increased for §EMammalian§! species by §Y50%§!."
 
  trait_mam_social:0 "A"
  trait_mam_social_desc:0 "§La.§!"
@@ -561,8 +559,7 @@ $mod_planet_jobs_produces_mult$ on §BCold§! Worlds: §G+5%§!\nDuring the last
  #trait_rep_skin_desc:0 "§LThe scaly surface of the skin of this species radically alters at some periods of its member's life, allowing the growth of a new and adaptive layer of protection.§!"
  trait_tec_hyperthermophilic:0 "Hyperthermophile"
  trait_tec_hyperthermophilic_desc:0 "§LWith the ability to lose heat and cool down quickly, retain high amounts of necessary hydratation and protection against solar rays, this species is able to survive in the harsher warm climates.§!"
- TRAIT_TEC_HYPERTHERMOPHILIC_EFFECT:0 "$MOD_POP_ENVIRONMENT_TOLERANCE$ on §HWarm§! Worlds: §G+20%§!\n
-$mod_planet_pops_upkeep_mult$ on §HWarm§! Worlds: §G-20%§!.\n\nEffects inverted on §HCold§! planets, and increased for §EReptilian§! species by §Y50%§!."
+ TRAIT_TEC_HYPERTHERMOPHILIC_EFFECT:0 "$MOD_POP_ENVIRONMENT_TOLERANCE$ on §HWarm§! Worlds: §G+20%§!\n$mod_planet_pops_upkeep_mult$ on §HWarm§! Worlds: §G-20%§!.\n\nEffects inverted on §HCold§! planets, and increased for §EReptilian§! species by §Y50%§!."
 
 
  trait_rep_social:0 "A"
