--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -186,13 +186,91 @@
 
  civic_tooltip_crafters_effects:0 "£job_artisan£ §Y$job_artisan_plural$§! are replaced with £job_artisan£ §Y$job_artificer_plural$§!.\n§Y$job_artificer_plural$§! produce §G+1§! £consumer_goods£ §Y$consumer_goods$§! as well as §Y2§! £trade_value£ §YTrade Value§! and §Y1.1§! £engineering£ §YEngineering Research§!.\nEvery §Y3§! §HIndustrial Districts§! grant §G1§! £building£ §YBuilding Slot§! on regular planets.\n\n§HVoid-Dweller empires benefits from this effect on Habitats.§!"
 
- civic_tooltip_anglers_effects:1 "On §Y(Wet Climate)§! worlds, §HAgriculture Districts§! are replaced by §HSeafarm Districts§!.\n£district£ Seafarm Districts are uncapped, cost §Y50§! less £minerals£ Minerals on §HOcean§! or §HPerfect§! Worlds and provide £job_angler£ §Y$job_angler_plural$§! and £job_pearl_diver£ §Y$job_pearl_diver_plural$§!.\n§Y$job_angler_plural$§! produce §Y8§! £food£ §Y$food$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!, and §Y$job_pearl_diver_plural$§! produce §Y3§! £consumer_goods£ §Y$consumer_goods$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!.\nAdds the §H$trait_aquatic$§! trait."
+ civic_tooltip_anglers_effects:1 "On §Y(Wet Climate)§! worlds, §HAgriculture Districts§! are replaced by §HSeafarm Districts§!.\n£district£ Seafarm Districts are uncapped, cost §Y50§! less £minerals£ Minerals on §HOcean§! or §HPerfect§! Worlds and provide £job_angler£ §Y$job_angler_plural$§! and £job_pearl_diver£ §Y$job_pearl_diver_plural$§!.\n§Y$job_angler_plural$§! produce §Y8§! £food£ §Y$food$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!, and §Y$job_pearl_diver_plural$§! produce §Y6§! £consumer_goods£ §Y$consumer_goods$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!.\nAdds the §H$trait_aquatic$§! trait.\n\nWith the §YHydrocentric§! you can flood specific planet types depending on your origin."
 
  civic_tec_anglers_lithoid:0 "Reef Carers"
  civic_tec_anglers_lithoid_desc:0 "Adept at utilizing natural reefs and rich oceanic soil, this society provides for itself a stable influx of sustenance and economic value."
+
  civic_tec_corporate_anglers_lithoid:0 "$civic_tec_anglers_lithoid$"
  civic_tec_corporate_anglers_lithoid_desc:0 "$civic_tec_anglers_lithoid_desc$"
- civic_tooltip_anglers_lithoid_effects:1 "On §Y(Wet Climate)§! worlds, §HMining Districts§! are replaced by §HPetro-Reef Districts§!.\n§HPetro-Reef Districts§! are uncapped, cost §Y50§! less £minerals£ Minerals on §HOcean§! or §HPerfect§! Worlds, and provide £job_tec_reef_miner£ §Y$job_tec_reef_miner_plural$§! and £job_pearl_diver£ §Y$job_pearl_diver_plural$§!.\n§Y$job_tec_reef_miner_plural$§! produce §Y8§! £minerals£ §Y$minerals$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!, and §Y$job_pearl_diver_plural$§! produce §Y3§! £consumer_goods£ §Y$consumer_goods$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!.\nAdds the §H$trait_aquatic$§! trait."
+
+ civic_tooltip_tec_anglers_lithoid_effects:1 "On §Y(Wet Climate)§! worlds, §HMining Districts§! are replaced by §HPetro-Reef Districts§!.\n§HPetro-Reef Districts§! are uncapped, cost §Y50§! less £minerals£ Minerals on §HOcean§! or §HPerfect§! Worlds, and provide £job_tec_reef_miner£ §Y$job_tec_reef_miner_plural$§! and £job_pearl_diver£ §Y$job_pearl_diver_plural$§!.\n§Y$job_tec_reef_miner_plural$§! produce §Y8§! £minerals£ §Y$minerals$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!, and §Y$job_pearl_diver_plural$§! produce §Y6§! £consumer_goods£ §Y$consumer_goods$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!.\nAdds the §H$trait_aquatic$§! trait.\n\nWith the §YHydrocentric§! you can flood specific planet types depending on your origin."
+# nuked
+ civic_tec_anglers_nuked:0 "$civic_anglers$"
+ civic_tec_anglers_nuked_desc:0 "$civic_anglers_desc$"
+ civic_tooltip_tec_anglers_nuked_effects:0 "$civic_tooltip_anglers_effects$\n\nWith the §YHydrocentric§! you can flood §YTomb§! Worlds."
+
+ civic_tec_anglers_nuked_lithoid:0 "$civic_tec_anglers_lithoid$"
+ civic_tec_anglers_nuked_lithoid_desc:0 "$civic_tec_anglers_lithoid_desc$"
+ civic_tooltip_anglers_nuked_lithoid_effects:0 "$civic_tooltip_tec_anglers_lithoid_effects$\n\nWith the §YHydrocentric§! you can flood §YTomb§! Worlds."
+
+
+ civic_tec_corporate_anglers_nuked:0 "$civic_tec_anglers_nuked$"
+ civic_tec_corporate_anglers_nuked_desc:0 "$civic_tec_anglers_nuked_desc$"
+
+ civic_tec_corporate_anglers_nuked_lithoid:0 "$civic_tec_anglers_nuked_lithoid$"
+ civic_tec_corporate_anglers_nuked_lithoid_desc:0 "$civic_tec_anglers_nuked_lithoid_desc$"
+
+# gaia
+ civic_tec_anglers_gaia:0 "$civic_anglers$"
+ civic_tec_anglers_gaia_desc:0 "$civic_anglers_desc$"
+ civic_tooltip_anglers_gaia_effects:0 "$civic_tooltip_anglers_effects$\n\nWith the §YHydrocentric§! you can flood §YGaia§! Worlds."
+
+ civic_tec_anglers_gaia_lithoid:0 "$civic_tec_anglers_lithoid$"
+ civic_tec_anglers_gaia_lithoid_desc:0 "$civic_tec_anglers_lithoid_desc$"
+ civic_tooltip_tec_anglers_gaia_lithoid_effects:0 "$civic_tooltip_tec_anglers_lithoid_effects$\n\nWith the §YHydrocentric§! you can flood §YGaia§! Worlds."
+
+ civic_tec_corporate_anglers_gaia:0 "$civic_tec_anglers_gaia$"
+ civic_tec_corporate_anglers_gaia_desc:0 "$civic_tec_anglers_gaia_desc$"
+
+ civic_tec_corporate_anglers_gaia_lithoid:0 "$civic_tec_anglers_gaia_lithoid$"
+ civic_tec_corporate_anglers_gaia_lithoid_desc:0 "$civic_tec_anglers_gaia_lithoid_desc$"
+
+
+ # hive hive
+
+ civic_tec_hive_anglers_hive:0 "$civic_tec_hive_anglers$"
+ civic_tec_hive_anglers_hive_desc:0 "$civic_tec_hive_anglers_desc$"
+ civic_tooltip_tec_hive_anglers_hive_effects:0 "$civic_tooltip_tec_hive_anglers_effects$\n\nWith the §YHydrocentric§! you can flood §YHive§! Worlds."
+
+ civic_tec_hive_anglers_hive_lithoid:0 "$civic_tec_hive_anglers_lithoid$"
+ civic_tec_hive_anglers_hive_lithoid_desc:0 "$civic_tec_hive_anglers_lithoid_desc$"
+ civic_tooltip_tec_hive_anglers_hive_lithoid_effects:0 "$civic_tooltip_tec_hive_anglers_lithoid_effects$\n\nWith the §YHydrocentric§! you can flood §YHive§! Worlds."
+
+# nuked hive
+ civic_tec_hive_anglers_nuked:0 "$civic_tec_hive_anglers$"
+ civic_tec_hive_anglers_nuked_desc:0 "$civic_tec_hive_anglers_desc$"
+ civic_tooltip_tec_hive_anglers_nuked_effects:0 "$civic_tooltip_tec_hive_anglers_effects$\n\nWith the §YHydrocentric§! you can flood §YTomb§! Worlds."
+
+ civic_tec_hive_anglers_nuked_lithoid:0 "$civic_tec_hive_anglers_lithoid$"
+ civic_tec_hive_anglers_nuked_lithoid_desc:0 "$civic_tec_hive_anglers_lithoid_desc$"
+ civic_tooltip_tec_hive_anglers_nuked_lithoid_effects:0 "$civic_tooltip_tec_hive_anglers_lithoid_effects$\n\nWith the §YHydrocentric§! you can flood §YTomb§! Worlds."
+
+
+# gaia hive
+ civic_tec_hive_anglers_gaia:0 "$civic_tec_hive_anglers$"
+ civic_tec_hive_anglers_gaia_desc:0 "$civic_tec_hive_anglers_desc$"
+ civic_tooltip_tec_hive_anglers_gaia_effects:0 "$civic_tooltip_tec_hive_anglers_effects$\n\nWith the §YHydrocentric§! you can flood §YGaia§! Worlds."
+
+ civic_tec_hive_anglers_gaia_lithoid:0 "$civic_tec_hive_anglers_lithoid$"
+ civic_tec_hive_anglers_gaia_lithoid_desc:0 "$civic_tec_hive_anglers_lithoid_desc$"
+ civic_tooltip_tec_hive_anglers_gaia_lithoid_effects:0 "$civic_tooltip_tec_hive_anglers_lithoid_effects$\n\nWith the §YHydrocentric§! you can flood §YGaia§! Worlds."
+
+# machine gaia
+
+ civic_tec_machine_anglers_gaia:0 "$civic_tec_machine_anglers$"
+ civic_tec_machine_anglers_gaia_desc:0 "$civic_tec_machine_anglers_desc$"
+ civic_tooltip_tec_machine_anglers_gaia_effects:0 "$civic_tooltip_tec_machine_anglers_effects$\n\nWith the §YHydrocentric§! you can flood §YGaia§! Worlds."
+
+
+# machine machine
+ civic_tec_machine_anglers_machine:0 "$civic_tec_machine_anglers$"
+ civic_tec_machine_anglers_machine_desc:0 "$civic_tec_machine_anglers_desc$"
+ civic_tooltip_tec_machine_anglers_machine_effects:0 "$civic_tooltip_tec_machine_anglers_effects$\n\nWith the §YHydrocentric§! you can flood §YMachine§! Worlds."
+
+ civic_tec_anglers_hive_lithoid:0 "$civic_tec_anglers_lithoid$"
+ civic_tec_anglers_hive_lithoid_desc:0 "$civic_tec_anglers_lithoid_desc$"
+ civic_tooltip_anglers_hive_lithoid_effects:0 "$civic_tooltip_tec_anglers_effects$\n\nWith the §YHydrocentric§! you can flood §YHive§! Worlds."
 
  civic_tooltip_corvee_system_effects:1 "Waives all £unity£ Unity costs for £pop£ §YPop Resettlement§!."
 
@@ -385,3 +463,27 @@
 # MISC replaces
 # ------------------------------------------------------------
  MOD_COUNTRY_ADMIN_CAP_ADD:1 "Additional Base Empire Size"
+
+# Flooded Worlds
+
+ decision_flood_habitat:0 "Flood World"
+ decision_flood_habitat_desc:0 "[decision_flood_world_desc]"
+ decision_flood_habitat_default_desc:0 "This world could be ideal for us - if only there was enough water. Our ice mining networks enable us to harvest ice from other celestial bodies and flood [This.GetName], making it into an ideal environment for us."
+ decision_flood_habitat_habitat_desc:0 "Habitats could be ideal for us - if only there was enough water. Our ice mining networks enable us to harvest ice from other celestial bodies and flood [This.GetName], making it into an orbital aquarium."
+ decision_flood_habitat_ring_desc:0 "Ringworld segments could be ideal for us - if only there was enough water. Our ice mining networks enable us to harvest ice from other celestial bodies and flood [This.GetName], making it into an aquarium segment."
+ decision_flood_habitat_elysium_desc:0 "Orbital Elysiums could be ideal for us - if only there was enough water. Our ice mining networks enable us to harvest ice from other celestial bodies and flood [This.GetName], making it into an orbital aquarium."
+ decision_flood_habitat_machine_desc:0 "Machine Worlds run too inefficiently for our aquatic needs - due to inadequate amount of water. Our ice mining networks enable us to harvest ice from other celestial bodies and flood [This.GetName], making it into an Coolant Machine world."
+ decision_flood_habitat_hive_desc:0 "This hive world is lacking the needed water supply for the overmind for the drones to work at utmost efficiency. Our ice mining networks enable us to harvest ice from other celestial bodies and flood [This.GetName], making it into an Hydrolocial Hive."
+ decision_flood_habitat_gaia_desc:0 "Gaia worlds are mostly ideal for most species, including us - but it could still do with more water. Our ice mining networks enable us to harvest ice from other celestial bodies and flood [This.GetName], making it into an oceanic paradise."
+ decision_flood_habitat_nuked_desc:0 "Tomb worlds might be inhospitable for most species, but we adapted to live on them, especially if there is enough water bodies to shield us from the background radiation - but this is not the case here. Our ice mining networks enable us to harvest ice from other celestial bodies and flood [This.GetName], giving us more shelters against the radiation."
+
+ flooded_habitat:0 "Aquatic World"
+ flooded_habitat_desc:0 "[flooded_world_desc]"
+ flooded_habitat_default_desc:0 "This world has been flooded with water, imitating the natural environment of Aquatic creatures."
+ flooded_habitat_ring_desc:0 "This ring segment has been flooded with water, imitating the natural environment of Aquatic creatures."
+ flooded_habitat_elysium_desc:0 "This orbital elysium has been flooded with water, imitating the natural environment of Aquatic creatures."
+ flooded_habitat_habitat_desc:0 "This habitat has been flooded with water, imitating the natural environment of Aquatic creatures."
+ flooded_habitat_machine_desc:0 "This machine world has been flooded with water, allowing increased cooling and efficiency for Aquatic machines."
+ flooded_habitat_hive_desc:0 "This hive world has been flooded with water, imitating the natural environment of Aquatic creatures."
+ flooded_habitat_gaia_desc:0 "This gaia world has been flooded with water, imitating the natural environment of Aquatic creatures while still maintaining plenty of habitats for non aquatic species." 
+ flooded_habitat_nuked_desc:0 "This tomb world has been flooded with water or contains enough bodies of water from prior its nuclear winter period to imitate the natural environment of Aquatic creatures while under the protection of those bodies of water." 
