Tradition changes, mostly

--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -48,7 +48,7 @@
  tr_mercantile_trickle_up_economics_gestalt_delayed:0 "Chains of interlinked semi-emotional emulator modules on our menial drones will surely increase our margin of benefit."
 
  tr_mercantile_commercial_enterprise_gestalt:0 "Supplementary Trading Processing"
- tr_mercantile_commercial_enterprise_gestalt_tooltip:0 "£building£ §YCommercial Zones§! buildings provide §Y1§! £job_tec_trade_drone£ §Y$job_tec_trade_Drone$ Job§!.\nRing World §YCommercial Segments§! and Habitat §YTrade Districts§! do likewise."
+ tr_mercantile_commercial_enterprise_gestalt_tooltip:0 "£building£ §Y$building_tec_trade_machine_1$§! and §Y$building_tec_trade_machine_stonks$§! buildings provide §Y1§! extra £job_tec_trade_drone£ §Y$job_tec_trade_Drone$ Job§! per level.\nRing World §YCommercial Segments§! and Habitat §YTrade Districts§! do likewise.\n£unity£ Unity from $job_tec_trade_Drone$: §G+1§!"
  tr_mercantile_commercial_enterprise_gestalt_delayed:0 "Higher initial investments will convey into higher gains for our collective."
 
  tr_mercantile_finish_desc:4 "Trade Value: §G+10%§!.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
@@ -133,8 +133,6 @@
  tr_genetics_finish_extra_traits:0 "$tr_genetics_finish$"
  tr_genetics_finish_extra_traits_tooltip:0 "Organic Species Modification Points: §G+3§!\nAllows research of rare §YTransgenesis§! technologies.\n$TRADITIONS_FINISH_AP$"
 
-
-
  tr_genetics_resequencing:0 "Genetic Resequencing"
  tr_genetics_resequencing_desc:0 "Can §YAdd§! Negative traits to Organic Species.\nCan §YRemove§! beneficial traits from Organic Species"
 #  tr_genetics_resequencing_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
@@ -163,9 +161,9 @@
  tradition_tec_vanilla_cybernetics_desc:0 "The limits and constraints imposed on us by our feeble organic bodies are simply unacceptable. To reach our full potential, we must turn to cybernetic implants."
 
  tr_cybernetics_adopt:0 "Cybernetic Traditions"
- tr_cybernetics_adopt_desc:0 "$tr_cybernetics_adopt_effect$"
- tr_cybernetics_adopt_effect:7 "Allows the §YAssimilation§! of Organic pops into §HCyborgs§!.\nPops undergoing §HCybernetic Assimilation§! provide additional £engineering£ §YEngineering§! research during and after the process."
- #"Gain access to the §YFlesh is Weak§! situation, which will upgrade your species with the §HCybernetic§! trait.\nThe Cybernetic trait provide different bonuses and replace half the £food£ £minerals£ base species upkeep with £energy£ Energy."
+ tr_cybernetics_adopt_tooltip:7 "Allows the §YAssimilation§! of Organic pops into §HCyborgs§!.\nPops undergoing §HCybernetic Assimilation§! provide additional £engineering£ §YEngineering§! research during and after the process."
+ tr_cybernetics_adopt_hive_tooltip:7 "Allows the §YAssimilation§! of Organic pops into §HCyborgs§!.\nPops undergoing §HCybernetic Assimilation§! provide additional £engineering£ §YEngineering§! research during and after the process."
+
 
  tr_cybernetics_finish:0 "Cybernetic Traditions Finished"
  tr_cybernetics_finish_desc:4 "Organic Species Trait Picks: §G+1§!\nSynthetic Species Trait Picks: §G+1§!\n$tr_cybernetics_finish_effect$"
@@ -214,8 +212,7 @@
  tradition_tec_vanilla_synthetics_desc:0 "Future is crafted from bolt to bolt, from circuit to circuit, and from data to data, all by our hand and innovation."
 
  tr_synthetics_adopt:0 "Synthetic Traditions"
- tr_synthetics_adopt_desc:0 "$tr_synthetics_adopt_effect$"
- tr_synthetics_adopt_effect:7 "Allows the assimilation of any Organic or Mechanical species into new Synthetic platforms.\nPops undergoing §HAssimilation§! provide additional £unity£ §YUnity§! during and after the process."
+ tr_synthetics_adopt_tooltip:7 "Allows the assimilation of any Organic or Mechanical species into new Synthetic platforms.\nPops undergoing §HAssimilation§! provide additional £unity£ §YUnity§! during and after the process."
 
  tr_synthetics_finish:0 "Synthetic Traditions Finished"
  tr_synthetics_finish_desc:4 "£building£ Capitals provide §G+1§! extra £job_roboticist£ Passive Assembly."
