--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -1376,7 +1376,7 @@ TRAIT_SYMBIOTIC_EFFECT:0 "$MOD_POP_HAPPINESS$: §G+20%§!\n$MOD_LEADER_SKILL_LEV
  leader_trait_governor_tec_robot_megaform_desc:0 "§LWith unmatched synthetic design and constant self-improvement, this governor control a vast array of processing assets with an hyper-optimal performance.§!"
 
  leader_trait_ruler_tec_robot_megaform:0 "Definitive Form"
- leader_trait_ruler_tec_robot_megaform_desc:0 "§LWith unmatched synthetic design and constant self-improvement, the embodyment of the main processing and ruling tasks constantly seeks ways of improve itself in all its extend.§!"
+ leader_trait_ruler_tec_robot_megaform_desc:0 "§LWith unmatched synthetic design and constant self-improvement, the embodiment of the main processing and ruling tasks constantly seeks ways of improve itself in all its extend.§!"
 
  leader_trait_scientist_tec_robot_megaform:0 "Definitive Form"
  leader_trait_scientist_tec_robot_megaform_desc:0 "§LWith unmatched synthetic design and constant self-improvement, this researcher control a vast array of information and innovations with an hyper-optimal performance.§!"
