--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -86,38 +86,31 @@
  tradition_tec_vanilla_psionics_desc:0 "We stand on the threshold of awakening the true psionic might of our species. Our minds are ready, and we have heard whispers of a psychic realm beyond our own..."
 
  tr_psionics_adopt:0 "Psionic Traditions"
- tr_psionics_adopt_desc:0 "$tr_psionics_adopt_effect$"
+ tr_psionics_adopt_tooltip:0 "$tr_psionics_adopt_effect$"
  tr_psionics_adopt_effect:7 "Allows immediate access and contact with the §MShroud§!."
 
  tr_tec_vanilla_psionics_psiorigin_adopt:0 "Psionic Traditions"
- tr_tec_vanilla_psionics_psiorigin_adopt_desc:0 "$tr_tec_vanilla_psionics_psiorigin_adopt_effect$"
+ tr_tec_vanilla_psionics_psiorigin_adopt_tooltip:0 "$tr_tec_vanilla_psionics_psiorigin_adopt_effect$"
  tr_tec_vanilla_psionics_psiorigin_adopt_effect:7 "Gain §Y$tech_telepathy$§! as £society£ Research option."
 
  tr_psionics_finish:0 "Psionic Traditions Finished"
- tr_psionics_finish_desc:4 "£mod_edict_cap_add£ Edict Funds: §G+50§!\nThe Shroud will start influencing our species capacities at a higher level, making our psionic species gain special traits.\n§RNOT READY - Grants the §YCommune with the ineffable§! situation.§!"
+ tr_psionics_finish_tooltip:4 "The Shroud will start influencing our species capacities at a higher level, making our psionic species gain special traits."
  tr_psionics_finish_effect:4 ""
-	# Note: Special project > situation
 
  tr_psionics_psi_corps:0 "Psi-Corps"
- tr_psionics_psi_corps_desc:0 "Gain access to the £building£ §YPsi-Corps§! building.\nProvides §Y$tech_thought_enforcement$§! as £society£ Research Option."
-#  tr_psionics_psi_corps_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_psionics_psi_corps_tooltip:0 "$ALLOW_PSI_CORPS$\nResearch option gained:\n £society£ §Y$tech_thought_enforcement$§!"
 
- tr_psionics_mind_readers:0 "Great Awakening"
- tr_psionics_mind_readers_desc:0 "Primary Species gain the §MPsionic Trait§!.\nGains access to the §YPsi-Assimilation§! Living Standards."
-#  tr_psionics_mind_readers_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_psionics_mind_readers:0 "Mind Readers"
+ tr_psionics_mind_readers_tooltip:0 "$MOD_ADD_BASE_COUNTRY_INTEL$: §G+10§!\nGives access to the §YSight Beyond Sight§! empire Edict."
 
- tr_psionics_psionic_assimilation:0 "Rites of Infusion"
- tr_psionics_psionic_assimilation_desc:0 "Allows §MInfused Explorations§! of the Shroud, which remove neutral outcomes and greatly reduces the chance of negative outcomes.\n£job_telepath£ Telepaths now provide an additional §G5%§! £mod_planet_psionic_jobs_produces_mult£ §MPsionic§! pop output."
- #Grants the §YBreach the Shroud§! Special project.\n£job_telepath£ Telepaths now provide an additional 5% £mod_planet_psionic_jobs_produces_mult£ §MPsionic§! pop output."
-#  tr_psionics_psionic_assimilation_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_psionics_psionic_assimilation:0 "Great Awakening"
+ tr_psionics_psionic_assimilation_tooltip:0 "All §Y$trait_latent_psionic$§! species will unlock their full psionic potential.\nAllows §YPsionic Assimilation§! of other species, unlocking their latent abilities."
 
- tr_psionics_breach_shroud:0 "Shrouded Communications"
- tr_psionics_breach_shroud_desc:0 "Codebreaking: §G+2§!\nEncryption: §G+2§!"
-#  tr_psionics_breach_shroud_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_psionics_breach_shroud:0 "Rites of Infusion"
+ tr_psionics_breach_shroud_tooltip:0 "Allows §MInfused Explorations§! of the Shroud, which remove neutral outcomes and greatly reduces the chance of negative outcomes.\nTelepaths now provide an additional §G+5%§! $mod_planet_psionic_jobs_produces_mult$."
 
- tr_psionics_shrouded_encryption:0 "Mind Readers"
- tr_psionics_shrouded_encryption_desc:0 "Gains §G+10§! base Intel.\nGrants the £mod_edict_cap_add£ §MSight Beyond Sight§M Edict."
-#  tr_psionics_shrouded_encryption_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_psionics_shrouded_encryption:0 "Shrouded Communications"
+ tr_psionics_shrouded_encryption_tooltip:0 "Gains §G+10§! base Intel.\nGrants the £mod_edict_cap_add£ §MSight Beyond Sight§M Edict."
 
 # Genetic
 # ------------------------------------------------------------
@@ -126,7 +119,6 @@
 
  tr_genetics_adopt:0 "Genetic Traditions"
  tr_genetics_adopt_tooltip:7 "Organic Species Modification Points: §G+3§!."
-	# "to do - +1 trait points for organic species / unlock clone vats" - +3 points in pick and finisher in vanilla
 
  tr_genetics_finish:0 "Genetic Traditions Finished"
  tr_genetics_finish_tooltip:4 "Organic Species Modification Points: §G+3§!\n\n$TRADITIONS_FINISH_AP$"
@@ -134,26 +126,18 @@
  tr_genetics_finish_extra_traits_tooltip:0 "Organic Species Modification Points: §G+3§!\nAllows research of rare §YTransgenesis§! technologies.\n$TRADITIONS_FINISH_AP$"
 
  tr_genetics_resequencing:0 "Genetic Resequencing"
- tr_genetics_resequencing_desc:0 "Can §YAdd§! Negative traits to Organic Species.\nCan §YRemove§! beneficial traits from Organic Species"
-#  tr_genetics_resequencing_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_genetics_resequencing_tooltip:0 "Can §YAdd§! Negative traits to Organic Species.\nCan §YRemove§! beneficial traits from Organic Species"
 
- tr_genetics_creation:0 "Genetic Creation"
- tr_genetics_creation_desc:0 "Unlocks §YAdvanced traits§! for Organic Species.\nAllow Hive-Minded Assimilation."
-#  tr_genetics_creation_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_genetics_creation:0 "Engineered Genesis"
+ tr_genetics_creation_tooltip:0 "Unlocks §YAdvanced§! Traits for Species Modification.\nAllows the Assimilation of Pops into or out of a §YHive-Mind§!."
 
- tr_genetics_enhanced_expression:0 "Enhanced Expression"
- tr_genetics_enhanced_expression_desc:0 "Organic Species Trait Picks: §G+1§!\nCan §YAlter§! Organic pop §YAppearance§! within the same Archetype."
-#  tr_genetics_enhanced_expression_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_genetics_enhanced_expression:0 "Allelic Expression"
+ tr_genetics_enhanced_expression_tooltip:0 "$mod_BIOLOGICAL_species_trait_picks_add$: §G+1§!\nCan §YAlter§! Pop §YAppearance§! with Species Modification."
 
- tr_genetics_efficient_cloning:0 "Efficient Cloning"
- tr_genetics_efficient_cloning_desc:0 "£job_tec_cloner£ Cloner jobs produce 1 extra £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!"
-	#to do - Clone vats produce +3 organic pop assembly"
-#  tr_genetics_efficient_cloning_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
-	# This one will be radically gutted
+ tr_genetics_efficient_cloning:0 "Stem Cell Stimulation"
+ tr_genetics_efficient_cloning_tooltip:0 "£job_tec_cloner£ Cloner jobs produce 1 extra £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!"
 
  tr_genetics_retrovirus:0 "Retroviral Manipulation"
-#  tr_genetics_retrovirus_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
-
 
 # Cybernetics
 # ------------------------------------------------------------
@@ -161,50 +145,32 @@
  tradition_tec_vanilla_cybernetics_desc:0 "The limits and constraints imposed on us by our feeble organic bodies are simply unacceptable. To reach our full potential, we must turn to cybernetic implants."
 
  tr_cybernetics_adopt:0 "Cybernetic Traditions"
- tr_cybernetics_adopt_tooltip:7 "Allows the §YAssimilation§! of Organic pops into §HCyborgs§!.\nPops undergoing §HCybernetic Assimilation§! provide additional £engineering£ §YEngineering§! research during and after the process."
- tr_cybernetics_adopt_hive_tooltip:7 "Allows the §YAssimilation§! of Organic pops into §HCyborgs§!.\nPops undergoing §HCybernetic Assimilation§! provide additional £engineering£ §YEngineering§! research during and after the process."
-
+ tr_cybernetics_adopt_tooltip:7 "Allows the §YAssimilation§! of Organic pops into §HCyborgs§!.\nPops undergoing §HCybernetic Assimilation§! provide additional £engineering£ §YEngineering§! and £society£ §YSociety§! research during and after the process."
+ tr_cybernetics_adopt_hive_tooltip:7 "Allows the §YAssimilation§! of Organic pops into §HCyborgs§! of the collective.\nPops undergoing §HCybernetic Assimilation§! provide additional £engineering£ §YEngineering§! and £society£ §YSociety§! research during and after the process."
 
  tr_cybernetics_finish:0 "Cybernetic Traditions Finished"
- tr_cybernetics_finish_desc:4 "Organic Species Trait Picks: §G+1§!\nSynthetic Species Trait Picks: §G+1§!\n$tr_cybernetics_finish_effect$"
- tr_cybernetics_finish_effect:4 ""
+ tr_cybernetics_finish_tooltip:4 "Organic Species Trait Picks: §G+1§!\nSynthetic Species Trait Picks: §G+1§!\nAscension Perks Unlocked: §G+1§!"
 
  tr_cybernetics_transubstantiation_synthesis:0 "Transubstantiation Synthesis"
-#  tr_cybernetics_transubstantiation_synthesis_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_cybernetics_organ_harvesting_tooltip:0 "Planets with ongoing §YPurges§! gain §G+25%§! £mod_pop_growth_speed£ Pop Assembly Speed." # TODO After AUG-28923/MR!4802 create new purge type
 
  tr_cybernetics_metabolic_reprocessing:0 "Metabolic Reprocessing"
-#  tr_cybernetics_metabolic_reprocessing_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
-
- tr_cybernetics_metabolic_reprocessing_hive_desc:0 "Empire Size from Cyborg Pops: §G-10%§!"
-
- tr_cybernetics_assimilator_metabolic_reprocessing_desc:0 "Empire Size from Cyborg Pops: §G-10%§!"
-
- tr_cybernetics_assembly_standards:0 "Integrated Subprocessing"
- tr_cybernetics_assembly_standards_desc:0 "Empire size from £district£ districts: §G-50%§Y"
-#  tr_cybernetics_assembly_standards_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
-
- tr_cybernetics_assembly_standards_assembly:0 "Assembly Standards"
- tr_cybernetics_assembly_standards_assembly_desc:0 "Unlocks £building£ §YMechadendrite Synthetizers§!.\n£building£ Mechadendrite Synthetizers replace standard assembly buildings, and assemble both £mod_planet_pop_assembly_mult£ Organic and £job_roboticist£ Robotic species without the need of jobs."
-#  tr_cybernetics_assembly_standards_assembly_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
-
- tr_cybernetics_assembly_standards_cyborigin:0 "Synaptic Subprocessing"
- tr_cybernetics_assembly_standards_cyborigin_desc:0 "to do - Empire size from £district£ districts: §G-50%§Y"
-#  tr_cybernetics_assembly_standards_cyborigin_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
-
- tr_cybernetics_assembly_standards_assimilators:0 "Crucible Worlds"
- tr_cybernetics_assembly_standards_assimilators_desc:0 "Gain access to Crucible Worlds.\nCrucible Worlds are a special type of colony designation which gives massive Pop Growth bonuses."
-#  tr_cybernetics_assembly_standards_assimilators_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
-	# This triad deserves a proper review for evolved
+ tr_cybernetics_metabolic_reprocessing_tooltip:0 "Empire Size from Cyborg Pops: §G-10%§!"
 
  tr_cybernetics_integrated_anatomy:0 "Integrated Anatomy"
- tr_cybernetics_integrated_anatomy_desc:0 "Allow the modification of Cyborg pops and Robots with §YBasic Cybernetic traits§! and §YFrames§!.\nCybernetic traits provide additional bonuses while increasing the species £energy£ Upkeep, and are further amplified by the unique Cybernetic Frames, which are Endo/Exoskeletons."
-#  tr_cybernetics_integrated_anatomy_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_cybernetics_integrated_anatomy_tooltip:0 "Organic Species Trait Picks: §G+1§!\nAllow the modification of Cyborg pops and Robots with §YCybernetic traits§!, §YCyber-Frames§! and §YMachine Integration Traits§!.\n\nCybernetic traits provide alternative bonuses to organic traits while increasing the species £energy£ Energy Upkeep, and are further amplified by the unique Cybernetic Frames, which are Endo/Exoskeletons.\nMachine Integration Traits can be combined with Organic or Cybernetic traits, but incur in high additional £energy£ Energy Upkeep."
+
+ tr_cybernetics_assembly_standards:0 "Mechadendrital Crucible"
+ tr_cybernetics_assembly_standards_tooltip:0 "Unlocks £building£ §YMechadendrite Synthetizers§!.\n£building£ Mechadendrite Synthetizers replace standard assembly buildings, and assemble both £mod_planet_pop_assembly_mult£ Organic and £job_roboticist£ Robotic species without the need of jobs.\n\nGain access to Crucible Worlds.\nCrucible Worlds are a special type of colony designation which gives massive Pop Assembly bonuses."
+
+ tr_cybernetics_assembly_standards_assimilators:0 "Crucible Worlds"
+ tr_cybernetics_assembly_standards_assimilators_desc:0 ""
 
  tr_cybernetics_modular_cybernetics:0 "Modular Cybernetics"
- tr_cybernetics_modular_cybernetics_desc:0 "$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!\n$tr_cybernetics_modular_cybernetics_tt$"
- tr_cybernetics_assimilator_modular_cybernetics_desc:0 "$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!\n$tr_cybernetics_assimilator_modular_cybernetics_tt$"
-#  tr_cybernetics_modular_cybernetics_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
-
+ tr_cybernetics_modular_cybernetics_tooltip:0 "$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!\n$tr_cybernetics_modular_cybernetics_tt$"
+ tr_cybernetics_modular_cybernetics_machine:0 "$tr_cybernetics_modular_cybernetics$"
+ tr_cybernetics_modular_cybernetics_machine_tooltip:0 "$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!\n$tr_cybernetics_assimilator_modular_cybernetics_tt$"
+tr_cybernetics_modular_cybernetics_machine_delayed:0 "$tr_cybernetics_modular_cybernetics_delayed$"
 
 # Synthetic
 # ------------------------------------------------------------
@@ -215,43 +181,25 @@
  tr_synthetics_adopt_tooltip:7 "Allows the assimilation of any Organic or Mechanical species into new Synthetic platforms.\nPops undergoing §HAssimilation§! provide additional £unity£ §YUnity§! during and after the process."
 
  tr_synthetics_finish:0 "Synthetic Traditions Finished"
- tr_synthetics_finish_desc:4 "£building£ Capitals provide §G+1§! extra £job_roboticist£ Passive Assembly."
- tr_synthetics_finish_effect:4 ""
+ tr_synthetics_finish_tooltip:4 "£building£ Capitals provide §G+2§! extra £job_roboticist£ Passive Assembly."
 
  tr_synthetics_finish_machine:0 "$tr_synthetics_finish$"
- tr_synthetics_finish_machine_desc:4 "£building£ §HStandard Capitals§! provide §G+1§! extra £job_replicator£ Passive Assembly, and £building£ §HSpecialized Capitals§! increase their effects by a §G25%§!."
- tr_synthetics_finish_machine_effect:4 ""
-	# Compared from vanilla, moved the synth trait to efficient power systems place - gave machines a proper bonus there
+ tr_synthetics_finish_machine_tooltip:4 "£building£ §HStandard Capitals§! provide §G+1§! extra £job_replicator£ Passive Assembly, and £building£ §HSpecialized Capitals§! increase their effects by a §G25%§!."
 
- tr_synthetics_maintenance_protocols:0 "Maintenance Protocols"
- #tr_synthetics_maintenance_protocols_desc:0 "Robotic pop amenities usage" AUTOGENERATED
-#  tr_synthetics_maintenance_protocols_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
-
- tr_synthetics_maintenance_protocols_machine:0 "$tr_synthetics_maintenance_protocols$"
- #tr_synthetics_maintenance_protocols_machine_desc:0 "" AUTOGENERATED
-#  tr_synthetics_maintenance_protocols_machine_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_synthetics_maintenance_protocols:0 "Reiterative Protocols"
+ tr_synthetics_maintenance_protocols_tooltip:0 "Synthetic Leaders are less prone to §YFatal Flaws§!"
 
  tr_synthetics_optimization_algorithms:0 "Optimization Algorithms"
- #tr_synthetics_optimization_algorithms_desc:0 "to do - -10% Cybernetic Output" AUTOGENERATED
-#  tr_synthetics_optimization_algorithms_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
-
- tr_synthetics_optimization_algorithms_machine:0 "Optimization Algorithms"
- #tr_synthetics_optimization_algorithms_desc:0 "to do - -10% Cybernetic Output" AUTOGENERATED
-#  tr_synthetics_optimization_algorithms_machine_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
  tr_synthetics_synthetic_age:0 "Procedural Blueprints"
- tr_synthetics_synthetic_age_desc:0 "Unlocks several advanced §YSynthetic Traits§!, which provide diverse bonuses and allow a better specialization of Synthetic units."
- #"Grants the §YSynthetic Evolution§! situation, which will convert our species into £job_roboticist£ Mechanical species, and allow the use of advanced §YSynthetic Traits§!."
-#  tr_synthetics_synthetic_age_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+ tr_synthetics_synthetic_age_tooltip:0 "Synthetic Species Trait Picks: §G+1§!\nUnlocks several advanced §YSynthetic Traits§!, which provide direct job production bonuses and can be combined with standard traits, allowing a better specialization of Synthetic units."
+ tr_synthetics_synthetic_age_delayed:0 "Improvement is not an option, is a must; New patterns, methods and enhancements need immediate implementation."
 
  tr_synthetics_prefabricated_components:0 "Prefabricated Components"
- tr_synthetics_prefabricated_components_desc:0 "$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!"
-#  tr_synthetics_prefabricated_components_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
 
  tr_synthetics_solid_state_actuators:0 "Solid-State Actuators"
  tr_synthetics_solid_state_actuators_desc:0 "Mechanical Species Modification Points: §G+3§!"
-#  tr_synthetics_solid_state_actuators_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
-		# Swap
+
  tr_synthetics_solid_state_actuators_machine:0 "Solid-State Actuators"
  tr_synthetics_solid_state_actuators_machine_desc:0 "Machine Species Modification Points: §G+3§!"
-#  tr_synthetics_solid_state_actuators_machine_delayed:0 "- This description is a placeholder, as will inherit the vanilla description -"
+
