Fixedd offspring drone description (T-0576) and made Imposing Megaforms generate special armies

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -487,3 +487,7 @@
  flooded_habitat_hive_desc:0 "This hive world has been flooded with water, imitating the natural environment of Aquatic creatures."
  flooded_habitat_gaia_desc:0 "This gaia world has been flooded with water, imitating the natural environment of Aquatic creatures while still maintaining plenty of habitats for non aquatic species." 
  flooded_habitat_nuked_desc:0 "This tomb world has been flooded with water or contains enough bodies of water from prior its nuclear winter period to imitate the natural environment of Aquatic creatures while under the protection of those bodies of water." 
+
+# Offspring
+
+ job_offspring_drone_effect_desc:1 "£job_spawning_drone£ $job_offspring_drone_plural$ increase £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§! and generate £unity£ §Y$unity$§! and other resources depending on designation, spawn §Y$offspring_defense_plural$§!, and provide a £mod_planet_jobs_simple_drone_produces_mult£ §G+10%§! increase in §Y$pop_cat_simple_drone$ output§!."
