--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -561,7 +561,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_warform_drone:0 "Warform Cluster"
  job_tec_warform_drone_plural:0 "Warform Cluster"
  job_tec_warform_drone_desc:0 "Highly specialized drones that incarnates a direct manifestation of the gestalt consciousness, being mobile platforms of control, defense and attack that protects the primary nexus of the planet with high efficiency, while also coordinating external fleet movements on the fly."
- job_tec_warform_drone_effect_desc:0 "£job_tec_warform_drone£ $job_tec_warform_drone_plural$ uses large amounts of £energy£ §YEnergy§! for increasing £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, spawning £defense_army£ §YDefense Armies§! and generating £amenities_no_happiness£ §YAmenities§!"
+ job_tec_warform_drone_effect_desc:0 "£job_tec_warform_drone£ $job_tec_warform_drone_plural$ uses large amounts of £energy£ §YEnergy§! for increasing £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, spawning £defense_army£ §Y$tec_warform_def_plural$§! and generating £amenities_no_happiness£ §YAmenities§!"
  mod_job_tec_warform_drone_add:0 "$job_tec_warform_drone$ Jobs"
 
 # ---------------------------------------------------------------
@@ -741,6 +741,10 @@ tec_jump_empty:0 "\n\n"
  tec_pherodrone_def:0 "$tec_pherodrone$"
  tec_pherodrone_def_plural:0 "$tec_pherodrone_plural$"
  tec_pherodrone_def_desc:0 "$tec_pherodrone_desc$"
+
+ tec_warform_def:0 "Warform Defensive Army"
+ tec_warform_def_plural:0 "Warform Defensive Armies"
+ tec_warform_def_desc:0 "A defensive army composed of warform robotic units coordinated by the machine intelligence, combining advanced technology and military strategy to protect the interests of the machine intelligence. These units could be designed to take on a variety of roles, including surveillance, border patrol, and sometimes even direct military engagement."
  
  tec_husk:0 "Frenzied Husk"
  tec_husk_plural:0 "Frenzied Husks"
