Updated overclocking to not affect RS usually and to only affect robotic and cybernetic pops, cut cost in half (T-0590)

--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -859,7 +859,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_hive_cyberoverclock:0 "Overcharge Directive"
  civic_tec_hive_cyberoverclock_desc:0 "Using their implants, the drones of this collective usually tune up and down their energy consumption in order to maximize output, or develop tasks requiring more efficient ways and execution."
- civic_tooltip_tec_hive_cyberoverclock_effects:0 "Upgrades basic drone living standards with the §H$living_standard_hive_mind_research$§! feature, making each drone produce up to §G10%§! more §YResources§! at the cost of an increased £energy£ §YEnergy§! upkeep, controlled via policy - §YDrone Overclock§!.\n\n"
+ civic_tooltip_tec_hive_cyberoverclock_effects:0 "Upgrades machine drones and cyborgs with the §H$living_standard_hive_mind_research$§! feature, making each drone produce up to §G10%§! more §YResources§! at the cost of an increased £energy£ §YEnergy§! upkeep, controlled via policy - §YDrone Overclock§!.\n\n"
 
 # Hive Job Replace Civics
 # ------------------------------------------------------------
@@ -1124,7 +1124,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_machine_techrush:0 "Subprocessing Boost"
  civic_tec_machine_techrush_desc:0 "While most units will use a sparce amount of their processing cores to basic or pre-defined tasks, there is room for taking advantage of redundant and remaining capacities by making drones capable of transmiting part of theirs to a global calculation effort with a increased resources investment, making the empire research spectrum wider and more solid."
- civic_tooltip_tec_machine_techrush_effects:0 "Upgrades basic drone living standards with the §H$living_standard_hive_mind_research$§! feature, making each drone produce up to 0.5 £trigger_tec_research£ §YResearch§! at the cost of a increased £energy£ §YEnergy§! upkeep, controlled via policy - §YDrone Overclock§!.\n\nPrime drones will get a double production and upkeep for this feature.\n"
+ civic_tooltip_tec_machine_techrush_effects:0 "Upgrades machine drones and cyborgs with the §H$living_standard_hive_mind_research$§! feature, making each drone produce up to 0.5 £trigger_tec_research£ §YResearch§! at the cost of a increased £energy£ §YEnergy§! upkeep, controlled via policy - §YDrone Overclock§!.\n\nPrime drones will get a double production and upkeep for this feature.\n"
 
  civic_tec_machine_terraformers:0 "Innate Shapers"
  civic_tec_machine_terraformers_desc:0 "Originally designed as a kind of autonomous terraform intelligence, this Machine Empire has a deep knowledge and profuse tools for terraforming and overhauling entire worlds, being able to alter each feature and creature on and under the surface."
