--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1155,11 +1155,11 @@ policy_goods_policy:0 "Consumer Goods Production"
 
  tec_mid_overclock_name:0 "Mid Overclock"
  mid_drone_overclock:0 "Mid Overclock"
- mid_drone_overclock_desc:0 "We can add a little energy boost to all units in order to increase their processing capacity.\n\n§EAll £pop_cat_complex_drone£ Drones will consume §R0.5§! extra £energy£ Energy and produce §Y0.25§! £trigger_tec_research£ Research.§!"
+ mid_drone_overclock_desc:0 "We can add a little energy boost to all units in order to increase their processing capacity.\n\n§EAll  machine drones and cyborgs will consume §R0.25§! extra £energy£ Energy and produce §Y0.25§! £trigger_tec_research£ Research.§!"
 
  tec_max_overclock_name:0 "Max Overclock"
  large_drone_overclock:0 "Max Overclock"
- large_drone_overclock_desc:0 "By providing large amounts of energy in a safe spectrum we will make all our units to magnify their processing capacity.\n\n§EAll £pop_cat_complex_drone£ Drones will consume §R1§! extra £energy£ Energy and produce §Y0.5§! £trigger_tec_research£ Research.§!"
+ large_drone_overclock_desc:0 "By providing large amounts of energy in a safe spectrum we will make all our units to magnify their processing capacity.\n\n§EAll machine drones and cyborgs will consume §R0.5§! extra £energy£ Energy and produce §Y0.5§! £trigger_tec_research£ Research.§!"
 
  tec_low_overclock_hive_name:0 "Low Overclock"
  low_drone_overclock_hive:0 "Low Overclock"
