Updated biothrophy living standard descriptions (T-0619)

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -488,3 +488,7 @@
 # Offspring
 
  job_offspring_drone_effect_desc:1 "£job_spawning_drone£ $job_offspring_drone_plural$ increase £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§! and generate £unity£ §Y$unity$§! and other resources depending on designation, spawn §Y$offspring_defense_plural$§!, and provide a £mod_planet_jobs_simple_drone_produces_mult£ §G+10%§! increase in §Y$pop_cat_simple_drone$ output§!."
+
+# Organic throphy descriptions
+
+ ORGANIC_TROPHY_POP_EFFECTS:0 "§YPops§! have $20_HAPPINESS$, unless there is a £consumer_goods£ §YConsumer Goods§! deficit."
