Added thermogenerator drones, fixed children of gaia being compatible with hive idyllic bloom (T-0620)

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -2826,6 +2826,14 @@ tec_jump_empty:0 "\n\n"
  mod_job_tec_hydrogenerator_drone_per_pop:0 "§G+1§! $job_tec_hydrorelay_drone$ Job per $VALUE$ Pops"
  mod_job_tec_hydrogenerator_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_hydrorelay_drone_add£ per $VALUE$ £pop£"
 
+ job_tec_thermogenertor_drone:0 "Thermogenerator Drone"
+ job_tec_thermogenertor_drone_plural:0 "Thermogenerator Drones"
+ job_tec_thermogenertor_drone_desc:0 "Thermogenerator Drones maintain and supervise the infrastructure deep within the oceanic depths, generating energy from the thermogenearting processes down there."
+ job_tec_thermogenertor_drone_effect_desc:0 "£job_tec_thermogenertor_drone£ $job_tec_thermogenertor_drone_plural$ produce £energy£ §Y$energy$§! and £mod_planet_amenities_no_happiness_add£ §YAmenities§!."
+ mod_job_tec_thermogenertor_drone_add:0 "$job_tec_thermogenertor_drone$ Jobs"
+ mod_job_tec_thermogenertor_drone_per_pop:0 "§G+1§! $job_tec_thermogenertor_drone$ Job per $VALUE$ Pops"
+ mod_job_tec_thermogenertor_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_thermogenertor_drone_add£ per $VALUE$ £pop£"
+
  job_tec_hydrorelay_drone:0 "Hydro-relay Drone"
  job_tec_hydrorelay_drone_plural:0 "Hydro-relay Drones"
  job_tec_hydrorelay_drone_desc:0 "Drones dedicated to overview, maitain and ensure a constant stream of hydrogen isotopes production."
