--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -990,11 +990,11 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_hive_menial:0 "Biospheric Harmony"
  civic_tec_hive_menial_desc:0 "This Hive Mind has a natural instinct that drives it to the search of the most optimal biomass and harvestable soil, creating a natural chain of production/waste where it can shape and nurture drones at a more than favourable rate compared with the time of growing and harvesting natural resources."
- civic_tooltip_tec_hive_menial_effects:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_agri_drone£ §Y$job_agri_drone$§! job.\n£job_agri_drone£ §Y$job_agri_drone_plural$§! provide extra §G1§! £amenities_no_happiness£ §YAmenities§! and §G0.5§! extra £food£ §YFood§!.\n"
+ civic_tooltip_tec_hive_menial_effects:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_agri_drone£ §Y$job_agri_drone$§! job.\n£amenities£ Amenities from n£job_agri_drone£ $job_agri_drone_plural$: §G+1§!\n"
 
  civic_tec_hive_menial_lithoid:0 "Lithospheric Harmony"
  civic_tec_hive_menial_lithoid_desc:0 "This Hive Mind has a natural instinct that drives it to the search of the most optimal mineral veins and harvestable terrain, creating a natural chain of production/waste where it can shape and nurture drones at a more than favourable rate compared with the time of processing and extracting natural resources."
- civic_tooltip_tec_hive_menial_lithoid_effects:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_mining_drone£ §Y$job_mining_drone$§! job.\n£job_mining_drone£ §Y$job_mining_drone_plural$§! provide extra §G1§! £amenities£ §YAmenities§! and §G0.5§! extra £minerals£ §YMinerals§!.\n"
+ civic_tooltip_tec_hive_menial_lithoid_effects:0 "£district£ §Y$district_hive$§! districts provide §G1§! extra £job_mining_drone£ §Y$job_mining_drone$§! job.\n§!£amenities£ Amenities from n£job_mining_drone£ $job_mining_drone_plural$: §G+1§!\n"
 
  civic_tec_hive_functional_architecture:0 "Filigree Stricturing"
  civic_tec_hive_functional_architecture_desc:0 "The delicacy and work dedicated by each drone to the structural planning and execution of this gestalt conciousness architecture is monumental, reaching degrees of construction, timings and efficiency generally out of possible predictions."
@@ -1138,7 +1138,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 # ------------------------------------------------------------
  civic_tec_machine_menial:0 "Conductive Relays"
  civic_tec_machine_menial_desc:0 "The excess of energy requirements for any machine is a evidence that must be effectively and practically solved; by recycling extra heat and kinetic energy from storages and factories to other processes via peer-to-per drone relay transmision, energy demands can be exponentially reduced and dispersion mitigated, while improving performance."
- civic_tooltip_tec_machine_menial_effects:0 "£district£ §Y$district_nexus$§! districts provide §G1§! extra £job_technician_drone£ §Y$job_technician_drone$§! job.\n£job_technician_drone£ §Y$job_technician_drone_plural$§! provide extra §G1§! £amenities£ §YAmenities§! and §G0.5§! extra £energy£ §Yenergy§!.\n"
+ civic_tooltip_tec_machine_menial_effects:0 "£district£ §Y$district_nexus$§! districts provide §G1§! extra £job_technician_drone£ §Y$job_technician_drone$§! job.\n£amenities£ Amenities from £job_technician£ $job_technician_drone_plural$: §G+1§!\n"
 
 
 # Machine Ruler Civics
