--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1899,15 +1899,22 @@ tec_jump_empty:0 "\n\n"
  job_tec_planner_plural:0 "Planners"
  job_tec_planner_desc:0 "Meticulous experts and engineers designated to fabricate specific construction templates to improve and facilitate the development of colonies and planets as a whole."
  job_tec_planner_effect_desc:0 "£job_tec_planner£ $job_tec_planner_plural$ convert £consumer_goods£ §YConsumer Goods§! into £unity£ §YUnity§!, £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§! and £trigger_tec_basic_resources£ §YBasic Resources§! based on the planet type."
+ mod_job_tec_planner_add:0 "$job_tec_planner$ Jobs"
+ mod_job_tec_planner_per_pop:0 "§G+1§! £mod_job_tec_planner_add£ $mod_job_tec_planner_add$ Job per $VALUE$ Pops"
+ mod_job_tec_planner_per_pop_short:0 "\n§G+1§! £mod_job_tec_planner_add£ per $VALUE$ £pop£"
 
  job_tec_planner_drone:0 "Planner Drone"
  job_tec_planner_drone_plural:0 "Planner Drones"
  job_tec_planner_drone_desc:0 "Meticulous drones assigned to fabricate specific construction templates to improve and facilitate the development of colonies and planets as a whole."
  job_tec_planner_drone_effect_desc:0 "£job_tec_planner_drone£ $job_tec_planner_drone_plural$ convert £trigger_tec_basic_resources£ §YBasic Resources§! into £unity£ §YUnity§!, £mod_planet_amenities_no_happiness_add£ §YAmenities§! and £trigger_tec_basic_resources£ §YBasic Resources§! based on the planet type."
+ mod_job_tec_planner_drone_add:0 "$job_tec_planner_drone$ Jobs"
+ mod_job_tec_planner_drone_per_pop:0 "§G+1§! £mod_job_tec_planner_drone_add£ $mod_job_tec_planner_drone_add$ Job per $VALUE$ Pops"
+ mod_job_tec_planner_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_planner_drone_add£ per $VALUE$ £pop£"
 
  building_tec_outreach_autofabricator:0 "Autofabricators"
  building_tec_outreach_autofabricator_desc:0 "Modular and efficient structures with a highly rich database developed to suit a colony with all possible standard construction templates necessary, regardless of distance or technological enlightment."
  building_tec_outreach_autofabricator_effect:0 "This £building£ automatically assembles both £job_roboticist£ Robotic and £tec_genepoints£ Organic pops"
+
 
 # ------------------------------------------------- Invention Breakthroughs
  building_tec_geomorpher_1:0 "Geomorpher"
@@ -2313,6 +2320,15 @@ tec_jump_empty:0 "\n\n"
  mod_job_tec_hired_foundry_add:0 "$job_tec_hired_foundry$ Jobs"
  mod_job_tec_hired_foundry_per_pop:0 "§G+1§! $job_tec_hired_foundry$ Job per $VALUE$ Pops"
  mod_job_tec_hired_foundry_per_pop_short:0 "\n§G+1§! £mod_job_tec_hired_foundry_add£ per $VALUE$ £pop£"
+
+# Hired catalystic technician
+ job_tec_hired_catalytic:0 "Hired $job_catalytic_technician$"
+ job_tec_hired_catalytic_plural:0 "Hired $job_catalytic_technician_plural$"
+ job_tec_hired_catalytic_desc:0 "Expert catalytic technicians who generate high-quality alloys from bio-sustainable materials, exported for use to their hiring organization."
+ job_tec_hired_catalytic_effect_desc:0 "£job_catalytic_technician£ $job_tec_hired_catalytic_plural$ turn £food£ §Y$food$§! into £alloys£ §Y$alloys$§! and £mod_trade_value_add£ §Y$TRADE_VALUE$§!." 
+ mod_job_tec_hired_catalytic_add:0 "$job_tec_hired_catalytic$ Jobs"
+ mod_job_tec_hired_catalytic_per_pop:0 "§G+1§! $job_tec_hired_catalytic$ Job per $VALUE$ Pops"
+ mod_job_tec_hired_catalytic_per_pop_short:0 "\n§G+1§! £mod_job_tec_hired_catalytic_add£ per $VALUE$ £pop£"
 
  job_tec_hired_artisan:0 "Private Artisan"
  job_tec_hired_artisan_plural:0 "Private Artisans"
@@ -3351,6 +3367,11 @@ planet_tec_free_agents:0 "Free Individuals"
 planet_tec_integrated:0 "Integrated Individuals"
 planet_maintenancedrones:0 "Maintenance Drones"
 
+
+private_hired: "Private/Hired"
+mod_tec_hired_job_base_production_mult: "Base Production from £job£ $private_hired$ Jobs"
+mod_tec_hired_job_base_upkeep_mult: "Base Upkeep from £job£ $private_hired$ Jobs"
+mod_tec_hired_job_trade_add: "£trade_value£ $TRADE_VALUE$ from £job£ $private_hired$ Jobs"
 
 # Organise
 
