Living standard trade modifiers refactor

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3373,6 +3373,11 @@ mod_tec_hired_job_base_production_mult: "Base Production from £job£ $private_h
 mod_tec_hired_job_base_upkeep_mult: "Base Upkeep from £job£ $private_hired$ Jobs"
 mod_tec_hired_job_trade_add: "£trade_value£ $TRADE_VALUE$ from £job£ $private_hired$ Jobs"
 
+mod_tec_ruler_lifestyle_trade_value_add: "£trade_value£ $TRADE_VALUE$ from $RULERS$"
+mod_tec_specialist_lifestyle_trade_value_add: "£trade_value£ $TRADE_VALUE$ from $SPECIALISTS$"
+mod_tec_worker_lifestyle_trade_value_add: "£trade_value£ $TRADE_VALUE$ from $WORKERS$"
+mod_tec_pop_lifestyle_trade_value_add: "£trade_value£ $TRADE_VALUE$ from £pop£ Pops"
+
 # Organise
 
  tec_cannot_take_ap_as_crisis:0 "$TRIGGER_FAIL$Really? Are you going to take this as crisis? Disgusting"
